--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="public/icon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="public/icon/favicon.svg" />
+    <link rel="shortcut icon" href="public/icon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="public/icon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="MySchedule" />
+    <link rel="manifest" href="public/icon/site.webmanifest" />
     <title>schedule.exe</title>
   </head>
   <body>
